<resources>
    <string name="app_name">ESAAL - إسأل‎</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="forgetPasswordLabel">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="certification">Qualification</string>
    <string name="civilId">National ID</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="attachment">Attachments</string>
    <string name="subjects">Subjects</string>
    <string name="addPicture">Add Your Photo</string>
    <string name="introLabel">
Get answers to all questions in all subjects for different levels of education,
        by communicating with leading professional teachers</string>
    <string name="addQuestion">Add Question</string>
    <string name="questionText">Your Question Here...</string>
    <string name="addPhoto">Add Photo</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="editProfile">Edit Profile</string>
    <string name="questionsAndReplies">Q &amp; A</string>
    <string name="logout">Logout</string>
    <string name="Payments">My Packages</string>
    <string name="phone2">Phone Number</string>
    <string name="email2">Email Address</string>
    <string name="save">Save</string>
    <string name="paid">You Paid</string>
    <string name="renew">For Renew</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="language">عربي</string>
    <string name="message">Message...</string>
    <string name="name">Name</string>
    <string name="replyText">Your Answer Here...</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="enterPassword">Enter Password</string>
    <string name="invalidLogin">user Name or Password Incorrect</string>
    <string name="generalError">an Error Occurred Please Try Again</string>
    <string name="enterFullName">Enter Your Name</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="enterMobile">Enter Your Phone</string>
    <string name="invalidEmail">Email Address incorrect</string>
    <string name="invalidPassword">Password is Too Short</string>
    <string name="emailExists">Email Address Already Exists</string>
    <string name="mobileExists">Mobile Number Already Exists</string>
    <string name="userNameExists">UserName Already Exists</string>
    <string name="accountCreatedSuccessfully">Account Created Successfully</string>
    <string name="lastName">Last Name</string>
    <string name="middleName">Middle Name</string>
    <string name="firstName">First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="questionWord">Question</string>
    <string name="ask">Esaal</string>
    <string name="teacherRegisterWord">Teacher Registration</string>
    <string name="studentRegisterWord">Student Registration</string>
    <string name="noSubjects">No Subjects To Show Now</string>
    <string name="noNotifications">No Notifications To Show Now</string>
    <string name="esaalStudent">Esaal Student</string>
    <string name="noPayments">No Payments To Show Now</string>
    <string name="noLink">Link Is Not Available</string>
    <string name="enterQuestion">Enter Question First</string>
    <string name="questionAdded">Question Added Successfully, We will Go Back To You  at the Earliest.</string>
    <string name="noBalance">Your Balance Not Enough to Add Question</string>
    <string name="noQuestions">No Questions Available Now</string>
    <string name="esaalTeacher">Esaal Teacher</string>
    <string name="latestQuestions">Latest Questions</string>
    <string name="filterBy">Filter By</string>
    <string name="currency">KWD</string>
    <string name="checkYourMail">Check You Email, Message has Sent To You </string>
    <string name="notFoundEmail">Email Address Is Not Found</string>
    <string name="addingQuestion">Adding Question</string>
    <string name="more">More</string>
    <string name="notifications">Notifications</string>
    <string name="myAccount">My Account</string>
    <string name="searchResult">Search Results</string>
    <string name="subject">Subject</string>
    <string name="enterSubject">Enter Subject Of Message</string>
    <string name="enterMessage">Enter Message Content</string>
    <string name="thanksMessage">Thanks For You Contact With Us, Your Message Is Sent,  We will Go Back To You  at the Earliest</string>
    <string name="updateSuccess">Question Updated Successfully</string>
    <string name="noPossibilityEditing">Updating Question Not Available</string>
    <string name="profileUpdatedSuccessfully">Your Profile Updated Successfully</string>
    <string name="civilIdFront">National ID - Front</string>
    <string name="civilIdBack">National ID - Back</string>
    <string name="accountNum">Account Number</string>
    <string name="swiftCode">Swift Code</string>
    <string name="bankAddress">Bank Address</string>
    <string name="personalAddress">Address</string>
    <string name="IBAN">International Account Number(IBAN)</string>
    <string name="country">Country</string>
    <string name="bankName">Bank Name</string>
    <string name="selectCountry">Select Country</string>
    <string name="descriptionDots">Description...</string>
    <string name="selectYourCountry">Select Your Country</string>
    <string name="enterSwiftCode">Enter Swift Code</string>
    <string name="enterBankName">Enter Bank Name</string>
    <string name="enterIBAN">Enter Your International Account Number(IBAN)</string>
    <string name="enterAccountNumber">Enter Account Number</string>
    <string name="enterBankAddress">Enter Bank Address</string>
    <string name="enterPersonalAddress">Enter Your Personal Address</string>
    <string name="selectCivilIdFrontImg">Select Your Front National ID Image</string>
    <string name="selectCivilIdBackImg">Select Your Back National ID Image </string>
    <string name="selectCertificationImg">Select Your Certification Image</string>
    <string name="selectSubjects">Select the Subjects You Will Study it</string>
    <string name="description">Description</string>
    <string name="myBalance">My Balance</string>
    <string name="balance">Balance:</string>
    <string name="questionsNumber">Number of Questions: </string>
    <string name="requestBalance">Request My Balance</string>
    <string name="withdrawBalanceSuccess">Your Withdraw Balance Send Successfully ,  We will Go Back To You  at the Earliest</string>
    <string name="balanceLessThanRequired">Your Balance Less Than 3.5 KWD</string>
    <string name="waitingResponse">Your Withdraw request sent , please Wait Response</string>
    <string name="enterReply">Enter Your Reply</string>
    <string name="replyAdded">Your Reply Added Successfully</string>
    <string name="oldPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="mismatchPass">Password Is Mismatched</string>
    <string name="enterConfirmPass">Confirm Your Password</string>
    <string name="enterNewPass">Enter New Password</string>
    <string name="enterCurrentPass">Enter Current Password</string>
    <string name="passwordChanged">Password Updated Successfully</string>
    <string name="incorrectPassword">Current Password Incorrect</string>
    <string name="changePassword">Change Password</string>
    <string name="addPackage">Add Package</string>
    <string name="payments">Payments</string>
    <string name="subscriptionSuccessfully">Your Subscription Done Successfully</string>
    <string name="Reservation">Reservation</string>
    <string name="pay">Pay</string>
    <string name="OperationFailed">Payment Operation Failed</string>
    <string name="addReply">Add Reply</string>
    <string name="cancel">Cancel</string>
    <string name="oneReservation">Sorry You Can not Reserve More One Question</string>
    <string name="canNotReply">Sorry You Can not Reply This Question Now...</string>
    <string name="month">Monthly</string>
    <string name="removeImgFirst">Can\'t Add More One Image, Remove the current Image First</string>
    <string name="removeVideoFirst">Can\'t Add More One Video, Remove the current Video First</string>
    <string name="noVideo">No Video Available For Showing</string>
    <string name="noImage">No Image Available For Showing</string>
    <string name="language2">عربي</string>
    <string name="waitingForActivation">Wait For Activation The Account</string>
    <string name="notActive">Your account not Active Yet</string>
    <string name="editQuestion">Edit Question</string>
    <string name="invalidPhoneNumber">Mobile Number is Incorrect</string>
    <string name="login2">Login</string>
    <string name="videoDuration">Video Duration Should be Less Than 120 seconds</string>
    <string name="selectSubject">Please Select Subject</string>
    <string name="addVideo">Add Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="continueAsGuest">Continue As a Guest</string>
    <string name="done">Done</string>
    <string name="terms">Terms and Conditions</string>
    <string name="agree">Agree For</string>
    <string name="agreeRequired">Please Agree For Terms And Conditions</string>
    <string name="all">All</string>
    <string name="remainsQuestions">Remains Questions</string>
    <string name="questions">Questions</string>
    <string name="question">Questions</string>
    <string name="packageFirst">Please Select Package First to Add Question</string>
    <string name="questionAnswered">This question is replied by another teacher.</string>
    <string name="teacherTerms">Teacher Terms And Conditions :</string>
    <string name="studentTerms">Student Terms And Conditions :</string>

</resources>
