<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_edit_profile_cl_outerContainer">


<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_edit_profile_cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="50dp"
                android:paddingStart="5dp"
                android:text="@string/firstName"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/middleName"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_middleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/lastName"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/userName"
                android:textColor="@color/gray" />


            <EditText
                android:id="@+id/fragment_edit_profile_et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/phone2"
                android:textColor="@color/gray" />


            <EditText
                android:id="@+id/fragment_edit_profile_et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="phone"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/email2"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_countryWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/country"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_bankNameWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/bankName"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_bankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_swiftCodeWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/swiftCode"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_swiftCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_IBANWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/IBAN"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_IBAN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_accountNumWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/accountNum"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_accountNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_bankAddressWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/bankAddress"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_bankAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_personalAddressWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/personalAddress"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_personalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/lightGray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/fragment_edit_profile_tv_descriptionWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:paddingStart="5dp"
                android:text="@string/description"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/fragment_edit_profile_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="50dp"
                android:background="@mipmap/box_add_question_or_reply"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:shadowColor="@color/gray" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_edit_profile_tv_subjectsWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjects"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />


    <com.riontech.staggeredtextgridview.StaggeredTextGridView
        android:id="@+id/fragment_edit_profile_stv_subjects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_tv_subjectsWord" />

    <TextView
        android:id="@+id/fragment_edit_profile_tv_save"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/box_btn_send"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_stv_subjects"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>