<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_password_cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main">

    <EditText
        android:id="@+id/fragment_change_password_et_oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/box_input_data"
        android:drawableStart="@mipmap/ic_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/fragment_change_password_et_newPassword"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_newPassword"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_newPassword" />

    <EditText
        android:id="@+id/fragment_change_password_et_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/box_input_data"
        android:drawableStart="@mipmap/ic_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/fragment_change_password_et_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/box_input_data"
        android:drawableStart="@mipmap/ic_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_newPassword"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_newPassword"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_et_newPassword" />

    <TextView
        android:id="@+id/fragment_change_password_tv_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@mipmap/box_btn_login"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_confirmPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_et_confirmPassword" />

    <include layout="@layout/loading" />


</androidx.constraintlayout.widget.ConstraintLayout>